# prorl-on-noma

./: CHANGELOG.md  README.md  howtousethisrepo.md  usinggit.md
agentcommands/.apm/: metadata.json
demo_TTA_MNIST/: compare_stream_plot.py
experiments/: EXPERIMENT_STRUCTURE_GUIDE.md  EXPERIMENT_TEMPLATE.md
experiments/noma-prorl-bench/: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/noma-prorl-bench/configs/: A0_naive_epoch.yaml  A1_cached.yaml
experiments/noma-prorl-bench/runs_smoke/A1/: config.json
experiments/noma-prorl-bench/runs_smoke/A2/: config.json
experiments/noma-prorl-bench/runs_smoke/A3/: config.json  metrics.jsonl  stdout.txt
experiments/noma-prorl-bench/runs_smoke/A4/: config.json  metrics.jsonl  stdout.txt
experiments/noma-prorl-bench/runs_smoke/fast/: config.json  metrics.jsonl  stdout.txt
experiments/noma-prorl-bench/scripts/: plot_runs.py
experiments/noma-prorl-bench/src/noma_prorl_bench/: logger.py  model.py  optim_utils.py  ppo.py  rollout.py  run.py  tasks.py  tokenizer.py
experiments/prol-noma-wedge2/: .gitignore  Context.md  INTEGRATION_TO_NOMA.md  pyproject.toml
experiments/prol-noma-wedge2/_smoke_py/: train.jsonl
experiments/prol-noma-wedge2/_smoke_sub/B/: config.json  train.jsonl
experiments/prol-noma-wedge2/configs/: default.yaml
experiments/prol-noma-wedge2/scripts/: run_sweep.py
experiments/prol-noma-wedge2/src/prol_noma_wedge/: algos.py  config.py  model.py  rollout.py  run.py  task.py  trainer.py  utils.py
prol-noma-wedge2/: Context.md
src/: ast.rs  graph.rs  lexer.rs  token.rs
(+36 files in other folders)
