[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prol-noma-wedge"
version = "0.1.0"
description = "Toy GRPO/PPO-style loop to test reference-forward elimination and reset semantics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
